--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   </head>
 
   <body>
-    <nav class="nav">
-      <a href="" class="nav__link nav__link--active">Home</a>
-      <a href="" class="nav__link nav__link--active">About</a>
-      <a href="" class="nav__link">Pricing</a>
-      <a href="" class="nav__link">Contact</a>
-    </nav>
+    <div>
+      welcome to
+    </div>
+    <button>Contrast</button>
   </body>
 
 </html>
